--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 22 21:25:14 BRT 2023
-sdk.dir=C\:\\Users\\MATHEUS\\AppData\\Local\\Android\\Sdk
+#Mon May 22 19:47:30 BRT 2023
+sdk.dir=C\:\\Users\\xandy\\AppData\\Local\\Android\\Sdk
